--- a/buildout.cfg
+++ b/buildout.cfg
@@ -4,7 +4,7 @@ prefer-final = true
 parts = eggs
 
 [eggs]
-recipe = z3c.recipe.scripts
+recipe = zc.recipe.egg
 script-initialization =
 initialization =
 entry-points =
